# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  bs-config.js  justfile  package-lock.json  package.json  spec.yaml  sqlx-data.json  tailwind.config.js  tests.http
.github/workflows/: audit-on-push.yml  general.yml
configuration/: base.yaml  local.yaml  production.yaml
examples/: add_fake_subscribers.rs  add_test_user.rs  start_fake_email_server.rs
migrations/: 20210831145811_create_subscriptions_table.sql  20210905113832_make_status_not_null_in_subscriptions.sql  20210905114326_create_subscriptions_tokens_table.sql  20210907143109_add_create_users_table.sql  20220107101019_seed_user.sql  20220318145522_create_idempotency_table.sql  20220319075832_create_newsletter_issues_table.sql  20220319082826_create_issue_delivery_queue_table.sql  20220321162411_add_retry_columns_to_issue_delivery_queue.sql
scripts/: checks.sh  init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  idempotency_expiration_worker.rs  idempotency_key_expiration.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: mod.rs  newsletter_issue.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/idempotency/: mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  delivery_process.rs  logout.rs  middleware.rs  mod.rs  not_found.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  post.rs
src/routes/subscriptions/: get.rs  mod.rs  post.rs
static/: style.css
templates/: 404.html  admin_dashboard.html  base.html  delivery_process.html  email.html  flash_msgs.html  home.html  login.html  newsletters.html  password.html  style.css  subscriptions.html
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  delivery_process.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
