[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
path = "src/lib.rs"


[[bin]]
name = "zero2prod"
path = "src/main.rs"


[dependencies]
actix-web = "~4.0.0-beta.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.11", default-features = false, features = ["yaml"] }
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
sqlx = { version = "0.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
serde-aux = "3"

tracing = "0.1.29"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.5.0-beta.9"

unicode-segmentation = "1.7.1"
validator = "0.14.0"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.13"
argon2 = { version = "0.3", features = ["std"] }
tera = "1.12"
once_cell = "1.7.2"
secrecy = { version = "0.8", features = ["serde"] }
actix-web-flash-messages = { version = "0.3", features = ["cookies"] }
actix-session = { git = "https://github.com/LukeMathWalker/actix-extras", branch = "rework-actix-session", features = ["redis-rs-tls-session"] }

[dev-dependencies]
claim = "0.5.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1.0"
linkify = "0.8.0"
