[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
default-run = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
  "cookies",
] }
sqlx = { version = "0.6", default-features = false, features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
] }
serde-aux = "3"

actix-web = "4"
actix-files = "0.6"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.16"

tracing = "0.1.29"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"

unicode-segmentation = "1.7.1"
validator = "0.15"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.13"
argon2 = { version = "0.5", features = ["std"] }
tera = "1.15"
once_cell = "1.7.2"
secrecy = { version = "0.8", features = ["serde"] }
serde_json = "1.0"
futures = "0.3"
humantime = "2.1"

[dev-dependencies]
claim = "0.5.0"
fake = "2.9"
quickcheck = "1.0"
quickcheck_macros = "1.0"
wiremock = "0.5"
linkify = "0.8.0"
serde_urlencoded = "0.7.1"
